# auto-keypress

./: .gitignore  CHANGELOG.md  Cargo.toml
.github/scripts/: release_meta.py
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-04-16-bilingual-release.md
src/: app_state.rs  config.rs  i18n.rs  key_sender.rs  main.rs  scheduler.rs  window_picker.rs
tests/: test_release_meta.py
