[package]
name = "auto-keypress"
version = "0.2.3"
edition = "2021"
description = "Auto key presser with window picker, built with Rust and GPUI."

[dependencies]
gpui = { version = "0.2.2", default-features = false }
gpui-component = { version = "0.5.1", default-features = false }
global-hotkey = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "std"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
] }
windows-sys = { version = "0.59", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }
raw-window-handle = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
raw-window-handle = "0.6"
objc = "0.2.7"

[lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
